fix: updated style alignment in input component

--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ border-top-left-radius: 2%;
 .left_container_calculator-container {
   display: flex;
   justify-content: space-between;
-
+height: 5vh;
 }
 
 .left_container_calculator-container>h1 {
