--- a/src/css/input.css
+++ b/src/css/input.css
@@ -28,8 +28,7 @@
 .mortgage_input-currency {
 	position: absolute;
 	top: 0px;
-	left: 0px;
-	width: 10%;
+	width: max-content;
 	height: 100%;
 	border-top-left-radius: 0.2rem;
 	border-bottom-left-radius: 0.2rem;
@@ -37,6 +36,15 @@
 	opacity: 0.5;
 	display: grid;
 	place-content: center;
+	padding: 0.2rem var(--padding);
+	}
+	
+	.mortgage_input-currency.left {
+		left: 0px;
+	}
+	
+	.mortgage_input-currency.right {
+		right: 0px;
 }
 
 
@@ -44,5 +52,5 @@
 .mortgage-duration--container {
 	display: flex;
 	width: 100%;
-	gap: 10%;
+	gap: 3%;
 }
